[package]
name = "jwt_issuer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jwt_issuer_lib"
path = "src/lib.rs"

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
jwt-simple = "0.11.5"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.3.4", features = ["v4"] }

